k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: donation-app
  labels:
    name: donation-app
