k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: donation-backend
  namespace: donation-app
spec:
  replicas: 1
  selector:
    matchLabels: { app: donation-backend }
  template:
    metadata:
      labels: { app: donation-backend }
    spec:
      containers:
      - name: backend
<<<<<<< HEAD
        image: docker.io/sreenjoyer/donation-backend:latest
=======
        image: docker.io/sreenjoyer/donation-backend:c62fa66
>>>>>>> c6d22119d47579ef06156fe8b8b33060419a3ba4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
