k8s/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: donation-app
spec:
  serviceName: mongodb-headless
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongod
        image: mongo:6.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: mongo
          containerPort: 27017
        readinessProbe:
          tcpSocket: { port: 27017 }
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          tcpSocket: { port: 27017 }
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 2Gi
