k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tipit-front
  namespace: donation-app
spec:
  type: ClusterIP
  selector:
    app: tipit-front
  ports:
    - name: http
      port: 80
      targetPort: 3000
