k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: donation-backend
  namespace: donation-app
spec:
  selector: { app: donation-backend }
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 5000
    nodePort: 30081
